--- a/discography/styles.css
+++ b/discography/styles.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #111;
+  background-color: var(--background);
   color: #fff;
   display: flex;
   flex-direction: column;
